# context

./: .cursorrules  .gitignore  .mcp.json  .windsurfrules  AGENTS.md  CLAUDE.md  README.md  context.code-workspace  package.json  repos.yaml  workspace.yaml
tools/: bootstrap.py  generate_image.py  manifest.yaml  pyproject.toml
tools/command-center/: branding.json  package-lock.json  package.json  tsconfig.cli.json
tools/command-center/cli/: client.ts  index.ts  mcp.ts
tools/command-center/electron/: main.ts  preload.ts
tools/command-center/server/: agent-scheduler.ts  index.ts  manager.ts  skills-syncer.ts  types.ts  watchers.ts
tools/command-center/web/: index.html  tsconfig.json  vite.config.ts
tools/context/: branding.json  package-lock.json  package.json  tsconfig.electron.json  tsconfig.server.json
tools/context-rdp/: package-lock.json  package.json
tools/context-rdp/src/: guacd.ts  index.ts  parse-rdp.ts  tunnel.ts
tools/context/electron/: fallback.html  main.ts  preload.ts  ui-bootstrap.ts  yaml-lite.ts
tools/context/scripts/: fallback-broker.py
tools/context/server/: agent-scheduler.ts  auto-commit.ts  index.ts  update-checker.ts
tools/context/web/: index.html
tools/ctx/: __init__.py  cli.py  config.py  runner.py
tools/ctx-mqtt/: package-lock.json  package.json  tsconfig.json
tools/ctx/aws/: cli.py  (+4 more)
tools/desktop-mcp/: package-lock.json  package.json
tools/file-preview-mcp/: package.json
tools/hooks/: claude-code-emit.sh
tools/landing-page/: README.md
tools/vscode-ext/: .gitignore  install.sh  package.json  tsconfig.json
(+638 files in other folders)
